Fix bug with text-wraping and toc displaying

--- a/css/style.scss
+++ b/css/style.scss
@@ -823,7 +823,7 @@ blockquote {
   }
   
   .toc ul .toc-level-2 {
-    padding-left: 40px;
+    padding-left: 20px;
     font-size: 14px;
   }
   
